# fp_lab1

./: .gitignore  README.md  fp-labs.cabal
.github/workflows/: haskell.yml
app/: Main.hs
py-scripts/: pal_product.py  quad_primes.py
src/Euler/: PalProduct.hs  QuadPrimes.hs
test/Euler/: PalProductSpec.hs  QuadPrimesSpec.hs
