cabal-version:       3.8
name:                fp-labs
version:             0.1.0.0
build-type:          Simple

common warnings
  ghc-options:       -Wall

flag ci
  description:       Enable CI-specific options
  default:           False
  manual:            True

library
  exposed-modules:   Euler.PalProduct, Euler.QuadPrimes
  hs-source-dirs:    src
  default-language:  Haskell2010

executable fp-labs
  main-is:           Main.hs
  hs-source-dirs:    app
  build-depends:     base, fp-labs
  default-language:  Haskell2010

test-suite fp-labs-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base, fp-labs, hspec
  default-language:  Haskell2010

