cabal-version:       3.8
name:                fp-labs
version:             0.1.0.0
build-type:          Simple

common warnings
  ghc-options:       -Wall

library
  exposed-modules:   Euler.PalProduct, Euler.QuadPrimes
  hs-source-dirs:    src
  build-depends:     base >=4.14 && <5
  default-language:  Haskell2010

executable fp-labs
  main-is:           Main.hs
  hs-source-dirs:    app
  build-depends:     base >=4.14 && <5, fp-labs
  default-language:  Haskell2010

test-suite fp-labs-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base >=4.14 && <5, fp-labs, hspec
  default-language:  Haskell2010
